--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 API_Project/__pycache__/app.cpython-37.pyc
 API_Project/config.py
-
+API_Project/__pycache__/*
 .venv
+API_Project/python-tutorial-frontend
